--- a/style/style.css
+++ b/style/style.css
@@ -125,3 +125,10 @@ section{
 #sectieReflectie{
     margin-top: 13em;
 }
+
+#fotoSchaal{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    height: 65vh;
+}
